# molt

./: .gitignore  AI_SAFETY_REVIEW_SYSTEM.md  Cargo.toml  README.md  mcp_config.json  release.sh
.github/: ACTIONS.md  RELEASE.md
.github/workflows/: ci.yml  nightly.yml  publish-mcp.yml  release.yml
docs/: CNAME  app.js  index.html  styles.css
hardclaw-mcp/: README.md  package-lock.json  package.json  tsconfig.json
hardclaw-mcp/src/: index.ts  sdk.ts
scripts/: package-linux-appimage.sh  package-linux.sh  package-macos.sh
src/: cli.rs  lib.rs  main.rs  onboarding.rs
src/consensus/: block_producer.rs  mod.rs  pov.rs
src/crypto/: commitment.rs  hash.rs  mnemonic.rs  mod.rs  signature.rs
src/mempool/: mod.rs
src/network/: mod.rs
src/safety/: ai_review.rs  consensus.rs  incentives.rs  mod.rs
src/schelling/: mod.rs  quality.rs  voting.rs
src/state/: mod.rs
src/tokenomics/: burn.rs  mod.rs  supply.rs
src/types/: amount.rs  block.rs  job.rs  mod.rs  review.rs  solution.rs  verification.rs
src/verifier/: honey_pot.rs  mod.rs  stake.rs
src/verifier/runtime/: capabilities.rs  javascript.rs  mod.rs  python.rs
src/wallet/: mod.rs
