[package]
name = "hardclaw"
version = "0.10.24"
edition = "2021"
authors = ["HardClaw Collective"]
description = "A Proof-of-Verification Protocol for the Autonomous Agent Economy"
license = "MIT"
repository = "https://github.com/hardclaw/hardclaw"
keywords = ["blockchain", "proof-of-verification", "agents", "consensus"]
categories = ["cryptography", "network-programming"]
build = "build.rs"

[dependencies]
# Cryptography - using audited, production-grade crates
ed25519-dalek = { version = "2.1", features = ["rand_core", "serde"] }
sha2 = "0.10"
sha3 = "0.10"
blake3 = "1.5"
rand = "0.8"
rand_chacha = "0.3"
bip39 = "2.0"  # BIP39 mnemonic seed phrases for wallet compatibility

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
hex = "0.4"

# Async runtime
tokio = { version = "1.36", features = ["full"] }

# Networking
libp2p = { version = "0.53", features = ["tcp", "dns", "noise", "yamux", "gossipsub", "mdns", "kad", "identify", "tokio", "macros"] }
hickory-resolver = "0.24"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Database (for state persistence)
sled = "0.34"

# Merkle trees
rs_merkle = "1.4"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# CLI enhancements
dialoguer = "0.11"
console = "0.15"
indicatif = "0.17"

# File system
dirs = "5.0"

# Multi-language verification runtimes
pyo3 = { version = "0.20", features = ["auto-initialize", "abi3-py38"], optional = true }
deno_core = "0.258"
sha256 = "1.5"

[features]
default = []
# Enable embedded Python via PyO3 (requires Python at build time)
# Without this, Python verification uses subprocess
embedded-python = ["pyo3"]

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
tokio-test = "0.4"

[build-dependencies]
winres = "0.1"

[package.metadata.deb]
maintainer = "HardClaw Collective"
section = "utils"
priority = "optional"
assets = [
	["packaging/linux/hardclaw.desktop", "usr/share/applications/hardclaw.desktop", "644"],
	["docs/assets/claw-256.png", "usr/share/icons/hicolor/256x256/apps/hardclaw.png", "644"],
	["docs/assets/favicon-32.png", "usr/share/icons/hicolor/32x32/apps/hardclaw.png", "644"],
	["docs/assets/favicon-16.png", "usr/share/icons/hicolor/16x16/apps/hardclaw.png", "644"],
]

[package.metadata.generate-rpm]
assets = [
	{ source = "packaging/linux/hardclaw.desktop", dest = "/usr/share/applications/hardclaw.desktop", mode = "644" },
	{ source = "docs/assets/claw-256.png", dest = "/usr/share/icons/hicolor/256x256/apps/hardclaw.png", mode = "644" },
	{ source = "docs/assets/favicon-32.png", dest = "/usr/share/icons/hicolor/32x32/apps/hardclaw.png", mode = "644" },
	{ source = "docs/assets/favicon-16.png", dest = "/usr/share/icons/hicolor/16x16/apps/hardclaw.png", mode = "644" },
]

[[bin]]
name = "hardclaw-node"
path = "src/main.rs"

[[bin]]
name = "hardclaw-cli"
path = "src/cli.rs"

[[bin]]
name = "hardclaw"
path = "src/onboarding.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
